change seed with actual joone products

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,13 @@
 // Import page-specific CSS files here.
 @import "home";
+
+.product > img {
+  width: 200px;
+  height: 200px;
+}
+
+.product {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
